--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="text_username">User Name:</string>
     <string name="text_password">Password:</string>
     <string name="text_login">Login</string>
+    <string name="white_space">" "</string>
 
 </resources>
