--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="text_password">Password:</string>
     <string name="text_login">Login</string>
     <string name="white_space">" "</string>
+    <string name="submit">Submit</string>
 
 </resources>
